# stable-diffusion-webui-forge

./: .eslintignore  .gitignore  .gitmodules  CODEOWNERS  LICENSE.txt  NEWS.md  README.md  README_a1111.md  config.json  download_supported_configs.py  launch.py  pydantic_global_config.py  pydantic_request_adapter.py  pyproject.toml  requirements.txt  requirements_versions.txt  run.bat  script.js  spaces.py  style.css  styles_integrated.csv  ui-config.json  update.bat  webui-user.bat  webui-user.sh  webui.bat  webui.py  webui.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: run_tests.yaml
backend/: README.md  __init__.py  args.py  attention.py  clip.py  huggingface_mapping.py  latent_spaces.py  loader.py  memory_management.py  operations.py  operations_bnb.py  operations_gguf.py  shared.py  state_dict.py  stream.py  utils.py  vae.py
backend/diffusion_engine/: base.py  chroma.py  flux.py  sd15.py  sd20.py  sd35.py  sdxl.py
backend/misc/: checkpoint_pickle.py  diffusers_state_dict.py  image_resize.py  sub_quadratic_attention.py  tomesd.py
backend/modules/: k_diffusion_extra.py  k_model.py  k_prediction.py
backend/nn/: autoencoder_kl.py  base.py  chroma.py  clip.py  dummy.py  flux.py  mmditx.py  t5.py  unet.py  vae.py
backend/patcher/: base.py  clip.py  clipvision.py  controlnet.py  lora.py  unet.py  vae.py
backend/sampling/: condition.py  sampling_function.py
backend/text_processing/: classic_engine.py  emphasis.py  engine.py  parsing.py  t5_engine.py  textual_inversion.py
backend/vae/: loader.py
extensions-builtin/Lora/: extra_networks_lora.py  lora_patches.py  network.py  networks.py  ui_extra_networks_lora.py
extensions-builtin/forge_legacy_preprocessors/: install.py
extensions-builtin/forge_space_animagine_xl_31/: forge_app.py  space_meta.json
extensions-builtin/forge_space_birefnet/: forge_app.py  space_meta.json
extensions-builtin/forge_space_example/: forge_app.py  space_meta.json
extensions-builtin/forge_space_florence_2/: forge_app.py  space_meta.json
extensions-builtin/forge_space_geowizard/: forge_app.py  space_meta.json
extensions-builtin/forge_space_iclight/: forge_app.py  space_meta.json
extensions-builtin/forge_space_idm_vton/: forge_app.py  requirements.txt  space_meta.json
extensions-builtin/forge_space_illusion_diffusion/: forge_app.py  space_meta.json
extensions-builtin/forge_space_photo_maker_v2/: forge_app.py  space_meta.json
extensions-builtin/forge_space_sapiens_normal/: forge_app.py  space_meta.json
extensions-builtin/forge_space_test/: space_meta.json
extensions-builtin/sd_forge_controlnet/: install.py  preload.py  requirements.txt  style.css
extensions-builtin/sd_forge_controlnet_example/: preload.py
extensions-builtin/sd_forge_dynamic_thresholding/: LICENSE.txt
extensions-builtin/sd_forge_ipadapter/: IPAdapterPlus.py  thanks
extensions-builtin/sd_forge_latent_modifier/: README.md
extensions-builtin/sd_forge_lora/: extra_networks_lora.py  lora.py  network.py  networks.py  preload.py  ui_edit_user_metadata.py  (+1 more)
html/: extra-networks-pane-dirs.html  extra-networks-pane-tree.html  extra-networks-tree-button.html  footer.html
javascript/: aspectRatioOverlay.js  contextMenus.js  dragdrop.js  extraNetworks.js  gradio.js  imageviewer.js  notification.js  profilerVisualization.js  resizeHandle.js  token-counters.js  ui.js
k_diffusion/: external.py  sampling.py  utils.py
ldm_patched/: float.py  hooks.py
modules/: call_queue.py  cmd_args.py  codemaster.py  dat_model.py  deepbooru.py  devices.py  errors.py  esrgan_model.py  extensions.py  extras.py  face_restoration_utils.py  gfpgan_model.py  gradio_extensions.py  hashes.py  hat_model.py  images.py  img2img.py  import_hook.py  infotext_utils.py  initialize.py  initialize_util.py  interrogate.py  launch_utils.py  lowvram.py  mac_specific.py  memmon.py  modelloader.py  npu_specific.py  paths.py  paths_internal.py  postprocessing.py  processing.py  profiling.py  progress.py  prompt_parser.py  realesrgan_model.py  rng.py  safe.py  script_callbacks.py  script_loading.py  (+59 more)
modules_forge/: alter_samplers.py  bnb_installer.py  clip.py  config.py  controlnet.py  controlnet_model.py  controlnet_supported.py  cuda_malloc.py  diffusers_patcher.py  forge_alter_samplers.py  forge_clip.py  forge_loader.py  forge_sampler.py  forge_space.py  forge_util.py  forge_version.py  google_blockly.py  gradio_compile.py  initialization.py  loader.py  main_entry.py  main_thread.py  ops.py  patch_basic.py  patch_clip.py  preprocessor_supported.py  shared.py  shared_options.py  stream.py  supported_controlnet.py  supported_preprocessor.py  unet_patcher.py  utils.py
packages_3rdparty/: README.md
scripts/: postprocessing_codeformer.py  postprocessing_focal_crop.py  postprocessing_gfpgan.py  postprocessing_upscale.py  prompts_from_file.py  sd_upscale.py  xyz_grid.py
test/: conftest.py  test_face_restorers.py  test_txt2img.py
(+386 files in other folders)
