[project]
name = "stable-diffusion-webui-forge"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "absl-py",
  "accelerate",
  "aenum",
  "aiofiles",
  "aiohappyeyeballs",
  "aiohttp",
  "aiosignal",
  "albucore",
  "albumentations",
  "annotated-types",
  "antlr4-python3-runtime",
  "anyio",
  "async-timeout",
  "attrs",
  "bitsandbytes",
  "blendmodes",
  "certifi",
  "cffi",
  "charset-normalizer",
  "clean-fid",
  "click",
  "clip @ https://github.com/openai/CLIP/archive/d50d76daa670286dd6cacf3bcd80b5e4823fc8e1.zip",
  "colorama",
  "coloredlogs",
  "colorlog",
  "contourpy",
  "cssselect2",
  "cycler",
  "cython",
  "deprecation",
  "depth-anything @ https://github.com/huchenlei/Depth-Anything/releases/download/v1.0.0/depth_anything-2024.1.22.0-py2.py3-none-any.whl",
  "depth-anything-v2 @ https://github.com/MackinationsAi/UDAV2-ControlNet/releases/download/v1.0.0/depth_anything_v2-2024.7.1.0-py2.py3-none-any.whl",
  "diffusers",
  "diskcache",
  "easydict",
  "einops",
  "exceptiongroup",
  "facexlib",
  "fastapi",
  "ffmpy",
  "filelock",
  "filterpy",
  "flatbuffers",
  "fonttools",
  "frozenlist",
  "fsspec",
  "ftfy",
  "fvcore",
  "gitdb",
  "gitpython",
  "gradio",
  "gradio-client",
  "gradio-imageslider",
  "gradio-rangeslider",
  "h11",
  "handrefinerportable @ https://github.com/huchenlei/HandRefinerPortable/releases/download/v1.0.1/handrefinerportable-2024.2.12.0-py2.py3-none-any.whl",
  "httpcore",
  "httpx",
  "huggingface-hub",
  "humanfriendly",
  "idna",
  "imageio",
  "importlib-metadata",
  "importlib-resources",
  "inflection",
  "insightface @ https://github.com/Gourieff/Assets/raw/main/Insightface/insightface-0.7.3-cp310-cp310-win_amd64.whl",
  "iopath",
  "jax",
  "jaxlib",
  "jinja2",
  "joblib",
  "jsonmerge",
  "jsonschema",
  "jsonschema-specifications",
  "kiwisolver",
  "kornia",
  "lark",
  "lazy-loader",
  "lightning-utilities",
  "llvmlite",
  "loadimg",
  "lxml",
  "manifold3d",
  "mapbox-earcut",
  "markdown-it-py",
  "markupsafe",
  "matplotlib",
  "mdurl",
  "mediapipe",
  "ml-dtypes",
  "mpmath",
  "multidict",
  "networkx",
  "numba",
  "numpy",
  "omegaconf",
  "onnx",
  "onnxruntime",
  "open-clip-torch",
  "opencv-contrib-python",
  "opencv-python",
  "opencv-python-headless",
  "opt-einsum",
  "orjson",
  "packaging",
  "pandas",
  "peft",
  "piexif",
  "pillow",
  "pillow-avif-plugin",
  "portalocker",
  "prettytable",
  "propcache",
  "protobuf",
  "psutil",
  "pycollada",
  "pycparser",
  "pydantic",
  "pydantic-core",
  "pydub",
  "pygments",
  "pyparsing",
  "pyreadline3",
  "python-dateutil",
  "python-multipart",
  "pytorch-lightning",
  "pytz",
  "pywavelets",
  "pywin32",
  "pyyaml",
  "referencing",
  "regex",
  "reportlab",
  "requests",
  "resize-right",
  "rich",
  "rpds-py",
  "rtree",
  "ruff",
  "safetensors",
  "scikit-image",
  "scikit-learn",
  "scipy",
  "semantic-version",
  "sentencepiece",
  "setuptools",
  "shapely",
  "shellingham",
  "simsimd",
  "six",
  "smmap",
  "sniffio",
  "sounddevice",
  "spandrel",
  "spandrel-extra-arches",
  "starlette",
  "stringzilla",
  "svg-path",
  "svglib",
  "sympy",
  "tabulate",
  "termcolor",
  "threadpoolctl",
  "tifffile",
  "timm",
  "tinycss2",
  "tokenizers",
  "tomesd",
  "tomlkit",
  "torch",
  "torchdiffeq",
  "torchmetrics",
  "torchsde",
  "torchvision",
  "tqdm",
  "trampoline",
  "transformers",
  "trimesh",
  "typer",
  "typing-extensions",
  "typing-inspection",
  "tzdata",
  "urllib3",
  "uvicorn",
  "vhacdx",
  "wcwidth",
  "webencodings",
  "websockets",
  "xxhash",
  "yacs",
  "yarl",
  "zipp",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]

target-version = "py39"

[tool.ruff.lint]

extend-select = [
  "B",
  "C",
  "I",
  "W",
]

exclude = [
	"extensions",
	"extensions-disabled",
	"modules_forge",
	"modules",
	"ldm_patched",
	"extensions-builtin",
]

ignore = [
	"E501", # Line too long
	"E721", # Do not compare types, use `isinstance`
	"E731", # Do not assign a `lambda` expression, use a `def`

	"I001", # Import block is un-sorted or un-formatted
	"C901", # Function is too complex
	"C408", # Rewrite as a literal
	"W605", # invalid escape sequence, messes with some docstrings
]

[tool.ruff.lint.per-file-ignores]
"webui.py" = ["E402"]  # Module level import not at top of file

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.security.HTTPBasic"]

[tool.pytest.ini_options]
base_url = "http://127.0.0.1:7860"
